tests/invalid/backend_generated_code_failure.wio
use @CppHeader("backend_generated_wrapper_break.h");

fn Entry(args: string[]) -> i32 {
    return 0;
}
